# CGenerics

./: .gitignore  AppState.c  AppState.h  Array.h  CGAppState.c  CGAppState.h  CGArray.h  CGArrayIterator.h  CGException.c  CGException.h  CGInteger.c  CGInteger.h  CGLinkedList.h  CGLogger.c  CGLogger.h  CGString.c  CGString.h  CGenerics.h  CMakeLists.txt  Doxyfile  Exception.c  Exception.h  Integer.c  Integer.h  LinkedList.h  Logger.c  Logger.h  Makefile  README.md  makeman.pl  usearray.c
src/: CGAppState.c  CGAppState.h  CGArray.h  CGArrayIterator.h  CGException.c  CGException.h  CGHashMap.h  CGInteger.c  CGInteger.h  CGKVPair.h  CGLinkedList.h  CGLogger.h  CGString.c  CGString.h  CGTree.h  CMakeLists.txt  Makefile  cgAppState.c  cgAppState.h  cgArray.h  cgArrayIterator.h  cgEvent.c  cgEvent.h  cgException.c  cgException.h  cgHashMap.h  cgInteger.c  cgInteger.h  cgKVPair.h  cgLinkedList.h  cgLogger.c  cgLogger.h  cgRectangle.c  cgRectangle.h  cgStack.h  cgString.c  cgString.h  cgTree.h  cgenerics.h  config.h.in  (+2 more)
src/benchmark/: 0500_Array.c  Makefile
src/test/: 0125_AppState.c  0250_Integer.c  0375_CGString.c  0500_Array.c  0501_ArrayPerformance.c  0510_ArrayIterator.c  0750_LinkedList.c  0800_CGTree.c  0900_KVPair.c  Makefile
test/: 0125_AppState  0125_AppState.c  0250_Integer.c  0375_CGString.c  0500_Array.c  0501_ArrayPerformance.c  0510_ArrayIterator.c  0750_LinkedList.c  0800_CGTree.c  0900_KVPair.c  0950_HashMap.c  0975_cgRectangle.c  CMakeLists.txt  Makefile
