include_directories(../src)

add_executable(0125_AppState 0125_AppState.c)
add_dependencies(0125_AppState libcgenerics.a)
target_link_libraries(0125_AppState cgenerics)
add_test(0125_AppState 0125_AppState)
add_executable(0250_Integer 0250_Integer.c)
add_dependencies(0250_Integer libcgenerics.a)
target_link_libraries(0250_Integer cgenerics)
add_test(0250_Integer 0250_Integer)
add_executable(0375_CGString 0375_CGString.c)
add_dependencies(0375_CGString libcgenerics.a)
target_link_libraries(0375_CGString cgenerics)
add_test(0375_CGString 0375_CGString)
add_executable(0500_Array 0500_Array.c)
add_dependencies(0500_Array libcgenerics.a)
target_link_libraries(0500_Array cgenerics)
add_test(0500_Array 0500_Array)
add_executable(0510_ArrayIterator 0510_ArrayIterator.c)
add_dependencies(0510_ArrayIterator libcgenerics.a)
target_link_libraries(0510_ArrayIterator cgenerics)
add_test(0510_ArrayIterator 0510_ArrayIterator)
add_executable(0750_LinkedList 0750_LinkedList.c)
add_dependencies(0750_LinkedList libcgenerics.a)
target_link_libraries(0750_LinkedList cgenerics)
add_test(0750_LinkedList 0750_LinkedList)
add_executable(0800_CGTree 0800_CGTree.c)
add_dependencies(0800_CGTree libcgenerics.a)
target_link_libraries(0800_CGTree cgenerics)
add_test(0800_CGTree 0800_CGTree)
add_executable(0900_KVPair 0900_KVPair.c)
add_dependencies(0900_KVPair libcgenerics.a)
target_link_libraries(0900_KVPair cgenerics)
add_test(0900_KVPair 0900_KVPair)
add_executable(0950_HashMap 0950_HashMap.c)
add_dependencies(0950_HashMap libcgenerics.a)
target_link_libraries(0950_HashMap cgenerics)
add_test(0950_HashMap 0950_HashMap)
add_executable(0975_cgRectangle 0975_cgRectangle.c)
add_dependencies(0975_cgRectangle libcgenerics.a)
target_link_libraries(0975_cgRectangle cgenerics)
add_test(0975_cgRectangle 0975_cgRectangle)
